--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,16 @@
 version: "3.3"
 services:
   mysql:
-    image: mysql:5.7 # MySQLのバージョンを指定
+    image: mysql:5.7 # MySQLのバージョン
     container_name: db-for-go
 
-    # MySQLの設定値を指定
+    # MySQLの設定値
     command:
       - --character-set-server=utf8mb4
       - --collation-server=utf8mb4_unicode_ci
       - --sql-mode=ONLY_FULL_GROUP_BY,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION
 
-    # コンテナ内で使用する環境変数の値を指定
+    # コンテナ内で使用する環境変数
     environment:
       MYSQL_ROOT_USER: "root" # MySQLのルートユーザ名
       MYSQL_ROOT_PASSWORD: "pass" # MySQLのルートユーザのパスワード
